--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -61,9 +61,13 @@ dd.changeset ul.changes {
 dd.changeset .changes li div {
  border: 1px solid #999;
  float: left;
- margin: .4em .5em 0 0;
+ margin: .5em .5em 0 0;
  overflow: hidden;
  width: .8em; height: .8em;
+}
+dd.changeset .changes li span { 
+ float: left;
+ margin-right: .8em;
 }
 dd.changeset .changes .add     { background: #bfb }
 dd.changeset .changes .delete  { background: #f88 }
