Fix the ''View changes'' form, for files containing the '@' character. Also, normalize changeset.py on using tag instead of html.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4678 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -111,9 +111,9 @@
 
                 <tr class="$odd_even">
                   <td class="diff">
-                    <input type="radio" name="old" value="${item.path}@${item.rev}"
+                    <input type="radio" name="old" value="${item.rev}@${item.path}"
                            checked="${idx == (len(items) - 1) or None}" />
-                    <input type="radio" name="new" value="${item.path}@${item.rev}"
+                    <input type="radio" name="new" value="${item.rev}@${item.path}"
                            checked="${idx == 0 or None}" />
                   </td>
                   <td class="change" style="padding-left: ${item.depth}em">
