In the TracChangeset view, each title of a diff view links to the corresponding restricted changeset, instead of going to the latest revision of that file in the browser.
There are still two other ways to go to the latest revision of that file (from the corresponding '''Files:''' index entry and from the link attached to the newest revision itself, in the diff view itself.

Implements suggestion 2. of #3398.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4682 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/changeset.html
+++ b/templates/changeset.html
@@ -85,8 +85,8 @@
               </em></small>
           </py:if>
           <py:choose>
-            <py:when test="item.diff_href">
-              (<a title="Show differences" href="$item.diff_href">view diffs</a>)
+            <py:when test="item.hide_diff">
+              (<a title="Show differences" href="$item.href">view diffs</a>)
             </py:when>
             <py:when test="ndiffs + nprops &gt; 0">
               (<a title="Show differences" href="#file$idx">${
