--- a/templates/diff_div.html
+++ b/templates/diff_div.html
@@ -1,6 +1,8 @@
 <!--!
        changes   - a list of diff items, each being a dict containing informations about
                    changes for one file:
+                     .href         - link for the title (optional)
+                     .title        - tooltip for the title link (optional)
                      .new and .old - information about the files being diffed
                        .path         - path of the file
                        .rev          - rev of the file (for 'sidebyside')
@@ -36,7 +38,8 @@
     <py:for each="idx, item in enumerate(changes)">
       <li py:if="item.diffs or item.props" class="entry">
         <h2 id="${not no_id and 'file%s' % idx or None}" py:choose="">
-          <a py:when="item.new.path" title="$item.new.title" href="$item.new.href">$item.new.path</a>
+          <a py:when="item.new.path" title="${item.title or item.new.title}"
+             href="${item.href or item.new.href}">$item.new.path</a>
           <py:otherwise>&nbsp;</py:otherwise>
         </h2>
         <ul py:if="item.props" class="props">
