Fix typo present in wiki and ticket history templates. Closes #4649.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4685 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/wiki_history.html
+++ b/templates/wiki_history.html
@@ -47,7 +47,7 @@
                 <a href="${href.wiki(page.name, version=item.version)}" title="View this version">$item.version</a>
               </td>
               <td class="date">${format_datetime(item.date)}</td>
-              <td class="author" title="${item.ipnr and 'IP-Address: ' + item.ipnr or None">${authorinfo(item.author)}</td>
+              <td class="author" title="${item.ipnr and 'IP-Address: ' + item.ipnr or None}">${authorinfo(item.author)}</td>
               <td class="comment">${context.wiki_to_oneliner(item.comment, shorten=True)}</td>
             </tr>
           </tbody>
