--- a/templates/ticket_history.html
+++ b/templates/ticket_history.html
@@ -50,7 +50,7 @@
                 <a href="${href.ticket(ticket.id, version=item.version)}" title="View this version">$item.version</a>
               </td>
               <td class="date">${format_datetime(item.date)}</td>
-              <td class="author" title="${item.ipnr and 'IP-Address: ' + item.ipnr or None">$item.author</td>
+              <td class="author" title="${item.ipnr and 'IP-Address: ' + item.ipnr or None}">$item.author</td>
               <td class="comment">${context.wiki_to_oneliner(item.comment, shorten=True)}</td>
             </tr>
           </tbody>
