Decouple the `wiki_to_*` methods from the WikiContext class, and prepare for the parser/formatter split in the Wiki engine.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4747 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/attachment.html
+++ b/templates/attachment.html
@@ -84,7 +84,7 @@
             </tr>
             <tr>
               <td class="message searchable">
-                ${context.parent.wiki_to_html(attachment.description)}
+                ${wiki_to_html(context.parent, attachment.description)}
               </td>
             </tr>
           </tbody>
