--- a/templates/ticket_new.html
+++ b/templates/ticket_new.html
@@ -35,7 +35,7 @@
                  cols="78">${ticket.description}</textarea>
           <fieldset py:if="ticket.description" id="preview">
             <legend>Description Preview</legend>
-            ${context.wiki_to_html(ticket.description)}
+            ${wiki_to_html(context, ticket.description)}
           </fieldset>
         </div>
 
