--- a/templates/wiki_history.html
+++ b/templates/wiki_history.html
@@ -48,7 +48,7 @@
               </td>
               <td class="date">${format_datetime(item.date)}</td>
               <td class="author" title="${item.ipnr and 'IP-Address: ' + item.ipnr or None}">${authorinfo(item.author)}</td>
-              <td class="comment">${context.wiki_to_oneliner(item.comment, shorten=True)}</td>
+              <td class="comment">${wiki_to_oneliner(context, item.comment, shorten=True)}</td>
             </tr>
           </tbody>
         </table>
