--- a/templates/wiki_diff.html
+++ b/templates/wiki_diff.html
@@ -22,13 +22,13 @@
     <div id="content" class="wiki">
       <h1 py:choose="">Changes
         <py:when test="old_version">between
-          <a href="${href.wiki(page.name,version=old_version)}">Version $old_version</a> and
+          <a href="${context.resource_href(version=old_version)}">Version $old_version</a> and
         </py:when>
         <py:otherwise>from</py:otherwise>
-        <a href="${href.wiki(page.name,version=new_version)}">Version $page.version</a> of
-        <a href="${href.wiki(page.name)}">$page_name</a>
+        <a href="${context.resource_href(version=new_version)}">Version $new_version</a> of
+        <a href="${context.resource_href()}">${context.name()}</a>
       </h1>
-      <form method="post" id="prefs" action="${href.wiki(page.name)}">
+      <form method="post" id="prefs" action="${context.resource_href()}">
         <div>
           <input type="hidden" name="action" value="diff" />
           <input type="hidden" name="version" value="$new_version" />
@@ -68,7 +68,7 @@
         <xi:include href="diff_div.html"/>
 
         <form py:if="'WIKI_DELETE' in perm and (not changes[0].diffs or new_version == latest_version)"
-          method="get" action="${href.wiki(page.name)}">
+          method="get" action="${context.resource_href()}">
           <input type="hidden" name="action" value="delete" />
           <input type="hidden" name="version" value="$new_version" />
           <input type="hidden" name="old_version" value="$old_version" />
